--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ workshop.dSYM/Contents/Resources/Relocations/aarch64/workshop.yml
 *.plist
 /car_management.dSYM
 car_management
+Dijkstra Benoît/USA-roads.bin
