fixed for retrieving

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ workshop.dSYM/Contents/Resources/Relocations/aarch64/workshop.yml
 *.plist
 /car_management.dSYM
 car_management
+/BST/main.dSYM
+/BST/main.dSYM
